--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
     crossorigin=""></script>
-    <title>Document</title>
+    <title>ISS Live Tracker</title>
 </head>
 <body>
     <h1 style="text-align: center;">Live Location Of the International Space Station</h1>
