--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <h1 style="text-align: center;">Live Location Of the International Space Station</h1>
     <div>
         <p style="text-align: center; font-size: 24px;">
-            Latitude : <span id="lat"></span>° <br/>
-            longitude : <span id="long"></span>° <br/>
-            The ISS is in <span id="visibility"></span> and it's moving at a velocity of  <span id="velocity"></span> mph <br/>
-            The ISS is <span id="high"></span> miles high up in space
+            Latitude : <b><span id="lat"></span>° </b> <br/>
+            longitude : <b><span id="long"></span>° </b> <br/>
+            The ISS is in <b><span id="visibility"></span></b> and it's moving at a velocity of  <b><span id="velocity"></span> mph </b><br/>
+            The ISS is <b><span id="high"></span></b> miles high up in space
         </p>
         <div id="mapid" style="height: 450px; width: 50%; margin: auto; border: 3px solid black; border-radius: 20px;"></div>
     </div>
